--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,5 @@
   "CluProjectName": "Flightbooking",
   "CluDeploymentName": "Testing",
   "CluAPIKey": "757ed44e9221460ba8cdfe076215293c",
-  "CluAPIHostName": "https://task5pneil.cognitiveservices.azure.com/"
+  "CluAPIHostName": "task5pneil.cognitiveservices.azure.com/"
 }
